--- a/media/style/style.css
+++ b/media/style/style.css
@@ -332,19 +332,18 @@ body.user-messages {
 /* ----- Header, check blocks/header.html ----- */
 #header {
   margin-top: 0px;
-  background: #16160f;
+  background: #FFF;
   font-family: 'Open Sans Condensed', Arial, sans-serif;
 }
 .content-wrapper {
   /* wrapper positioning class */
-
   width: 960px;
   margin: auto;
   position: relative;
 }
 #logo img {
   padding: 5px 0px 5px 0px;
-  height: 75px;
+  height: 60px;
   width: auto;
   float: left;
 }
@@ -550,9 +549,9 @@ body.user-messages {
   /* Div containing Home button, scope navigation, search form and ask button, check blocks/secondary_header.html */
 
   height: 55px;
-  background: #e9e9e1;
-  border-bottom: #d3d3c2 1px solid;
-  border-top: #fcfcfc 1px solid;
+  background: #ded2de;
+  border-bottom: #c8b5c8 1px solid;
+  border-top: #c8b5c8 1px solid;
   margin-bottom: 10px;
   font-family: 'Open Sans Condensed', Arial, sans-serif;
   box-sizing: border-box;
@@ -574,7 +573,7 @@ body.user-messages {
   float: left;
 }
 #homeButton i {
-  color: #7a7a7b;
+  color: #a789a7;
   font-size: 26px;
   line-height: 54px;
   margin-left: 5px;
@@ -614,7 +613,7 @@ body.user-messages {
 #searchBar {
   /* Main search form , check widgets/search_bar.html */
 
-  border: 1px solid #c9c9b5;
+  border: 1px solid #c8b5c8;
   background: white;
   height: 41px;
   z-index: 1000;
@@ -3589,13 +3588,13 @@ ul.errorlist {
   margin: 0;
   list-style: none;
   font-size: 12px;
-  color: darkred;
+  color: 826182;
 }
 ul.errorlist li {
   line-height: 16px;
 }
 .form-error {
-  color: #900;
+  color: #916c91;
   font-weight: normal;
   vertical-align: bottom;
 }
@@ -3603,7 +3602,7 @@ label + .form-error {
   padding-left: 8px;
 }
 .ask-page label + .form-error ul.errorlist, .edit-question-page label + .form-error ul.errorlist, .edit-answer-page label + .form-error ul.errorlist {
-  color: #900;
+  color: #916c91;
   display: inline-block;
   font-size: 16px;
   margin-left: 0;
@@ -3651,14 +3650,14 @@ table.ab-subscr-form {
   color: #990000;
 }
 .error, .openid-signin p.error {
-  color: darkred;
+  color: 826182;
   margin: 0;
   font-size: 12px;
   font-weight: bold;
   text-align: left;
 }
 label.retag-error {
-  color: darkred;
+  color: 826182;
   padding-left: 5px;
   font-size: 10px;
 }
@@ -3926,7 +3925,7 @@ table.form-as-table .errorlist {
   padding: 0 0 0 5px;
   text-align: left;
   font-size: 10px;
-  color: darkred;
+  color: 826182;
 }
 table.form-as-table input {
   display: inline;
@@ -3959,7 +3958,7 @@ ul.form-horizontal-rows label {
 }
 ul.form-horizontal-rows ul.errorlist {
   list-style: none;
-  color: darkred;
+  color: 826182;
   font-size: 10px;
   line-height: 10px;
   position: absolute;
