--- a/media/style/style.css
+++ b/media/style/style.css
@@ -549,9 +549,9 @@ body.user-messages {
   /* Div containing Home button, scope navigation, search form and ask button, check blocks/secondary_header.html */
 
   height: 55px;
-  background: #ded2de;
-  border-bottom: #c8b5c8 1px solid;
-  border-top: #c8b5c8 1px solid;
+  background: #e9e9e1;
+  border-bottom: #d3d3c2 1px solid;
+  border-top: #fcfcfc 1px solid;
   margin-bottom: 10px;
   font-family: 'Open Sans Condensed', Arial, sans-serif;
   box-sizing: border-box;
@@ -573,7 +573,7 @@ body.user-messages {
   float: left;
 }
 #homeButton i {
-  color: #a789a7;
+  color: #7a7a7b;
   font-size: 26px;
   line-height: 54px;
   margin-left: 5px;
@@ -613,7 +613,7 @@ body.user-messages {
 #searchBar {
   /* Main search form , check widgets/search_bar.html */
 
-  border: 1px solid #c8b5c8;
+  border: 1px solid #c9c9b5;
   background: white;
   height: 41px;
   z-index: 1000;
