edit text in email
email text edit

--- a/templates/authopenid/email_validation/body.html
+++ b/templates/authopenid/email_validation/body.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<p>{% trans %}To make use of the Forum, please follow the link below:{% endtrans %}</p>
+<p>{% trans %}To use Legalnote, please click the link below:{% endtrans %}</p>
 
 <p><a href="{{ validation_link }}" >{{ validation_link }}</a></p>
 
