--- a/templates/main_page/javascript.html
+++ b/templates/main_page/javascript.html
@@ -20,7 +20,7 @@
     } else {
         // no history support :(
         //hash = unescape(window.location.hash).replace('#','').split("?")[0]
-        {# todo: fix this evil code!!! #}
+        //{# todo: fix this evil code!!! #}
         var hash = History.unescapeHash(window.location.hash).replace('#','').split("?")[0];
         var questions_url = askbot['urls']['questions'];
         if (hash.substring(0, questions_url.length) === questions_url) {
@@ -29,7 +29,7 @@
             var url = questions_url + hash;
         }
         if (hash !== '' && hash !== undefined && url !== undefined){
-            {# was this causing strange redirects in IE??? #}
+            //{# was this causing strange redirects in IE??? #}
             window.location = document.location.protocol + '//' + window.location.host + url;
         }
     }
