--- a/templates/badges.html
+++ b/templates/badges.html
@@ -29,7 +29,7 @@
 <div class="box">
     <h2>{% trans %}Community badges{% endtrans %}</h2>
     <p>
-        <a style="cursor:default;" title="{% trans %}gold badge: the highest honor and is very rare{% endtrans %}" class="medal"><span class="badge1">&#9679;</span>&nbsp;{% trans %}gold{% endtrans %}</a>
+        <a style="cursor:default;" title="{% trans %}Gold badge: the highest honor and is very rare{% endtrans %}" class="medal"><span class="badge1">&#9679;</span>&nbsp;{% trans %}gold{% endtrans %}</a>
     </p>
     <p>
         {% trans %}Gold badge is the highest award in this community. To obtain it you have to show 
@@ -38,18 +38,18 @@ profound knowledge and ability in addition to your active participation.{% endtr
     <p>
         <a 
             style="cursor:default;" 
-            title="{% trans %}silver badge: occasionally awarded for the very high quality contributions{% endtrans %}" 
+            title="{% trans %}Silver badge: occasionally awarded for the very high quality contributions{% endtrans %}" 
             class="medal"><span class="badge2">&#9679;</span>&nbsp;{% trans %}silver{% endtrans %}</a>
     </p>
     <p>
-        {% trans %}silver badge: occasionally awarded for the very high quality contributions{% endtrans %}
+        {% trans %}Silver badge: occasionally awarded for the very high quality contributions{% endtrans %}
     </p>
     <p>
-        <a style="cursor:default;" title="{% trans %}bronze badge: often given as a special honor{% endtrans %}" class="medal">
+        <a style="cursor:default;" title="{% trans %}Bronze badge: often given as a special honor{% endtrans %}" class="medal">
         <span class="badge3">&#9679;</span>&nbsp;{% trans %}bronze{% endtrans %}</a>
     </p>
     <p>
-        {% trans %}bronze badge: often given as a special honor{% endtrans %}
+        {% trans %}Bronze badge: often given as a special honor{% endtrans %}
     </p>
 </div>
 {% endblock %}
